samples/_failures_safe/1761044946_d7decd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76d169fa.c: In function ‘tokenize’:
./samples/SAFE/__tmp_76d169fa.c:178:14: error: expected ‘;’ at end of input
  178 |         token
      |              ^
      |              ;
./samples/SAFE/__tmp_76d169fa.c:178:9: error: expected declaration or statement at end of input
  178 |         token
      |         ^~~~~
./samples/SAFE/__tmp_76d169fa.c:178:9: error: expected declaration or statement at end of input
